[package]
name = "rlight"
description = "right light or rust light"
authors = ["GreatC0der"]
license = "GPL-3.0"
repository = "https://github.com/GreatC0der/rlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = { version = "0.5.1", default-features = false, features = ["ron_conf"] }
serde = "1.0.183"
serde_derive = "1.0.183"
v4l = { version = "0.14.0", default-features = false, features = ["libv4l"] }
at_debug = "0.1.0"
