[package]
name = "rlight"
description = "right light or rust light"
authors = ["GreatC0der"]
license = "GPL-3.0"
repository = "https://github.com/GreatC0der/rlight"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = { version = "0.5.1", default-features = false, features = ["ron_conf"] }
serde = "1.0.183"
serde_derive = "1.0.183"
brightness = "0.5.0"
nokhwa = { version = "0.10.4", features = ["input-native"] }
